# walker

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  IDEAS.md  PRODUCT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  alembic.ini  docker-compose.yml  mkdocs.yml  pip.conf.example  pyproject.toml  start-walker.bat  walker.spec
.backlog/: README.md
.backlog/ADAPTIVE/: PRD.md
.backlog/CODEUX/: PRD.md
.backlog/DOCS/: PRD.md
.backlog/I18N/: PRD.md
.backlog/POLISH/: PRD.md
.backlog/PROJECTS/: PRD.md
.backlog/SHIP/: PRD.md
.backlog/STATES/: PRD.md
.backlog/TASKS/: PRD.md
.backlog/TECH/: PRD.md
.backlog/UX/: PRD.md
.backlog/VCODE/: PRD.md
.backlog/archive/: ADAPTIVE.md  CODEUX.md  CORE.md  I18N.md  PROJECTS.md  SHIP.md  STATES.md  TASKS.md  UX.md  VCODE.md
.claude/: launch.json
.claude/commands/: release.md
.github/workflows/: cd-docker.yml  cd-exe.yml  ci.yml  docs.yml
.impeccable/: design.json
alembic/: env.py
alembic/versions/: 097aee9a73aa_entries.py  19677d96f929_tasks.py  2c26d29416b2_core_catalog_schema.py  2dcd1014de82_entry_task_link.py  30f1671e028d_settings_theme_preference.py  (+15 more)
docs/: catalog-import.md
docs-site/: catalog-import.fr.md  catalog-import.md  getting-started.fr.md  getting-started.md  guide.fr.md  guide.md  index.fr.md  index.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: build-exe.ps1  deploy-local.ps1  dev.ps1  seed_demo.py
tests/: conftest.py  test_api_auth_sso.py  test_api_auth_standalone.py  test_api_backing_codes.py  test_api_catalog.py  test_api_checklist.py  test_api_codes.py  test_api_dependencies.py  test_api_entries.py  test_api_fortnight.py  test_api_health.py  test_api_period.py  test_api_reference.py  test_api_settings.py  test_api_task_states.py  test_api_tasks.py  test_api_user.py  test_db.py  test_migration_catalog_organization_scoped.py  test_migration_organization_backfill.py  test_migration_user_defined_states.py  test_models_user.py  test_recurrence.py  test_services_auth.py  test_services_auth_session.py  test_services_catalog.py  test_services_catalog_organization.py  test_services_checklist.py  test_services_fortnight.py  test_services_insert_break.py  test_services_merge_entries.py  test_services_organization.py  test_services_palette.py  test_services_period.py  test_services_reference.py  test_services_settings.py  test_services_states.py  test_services_task_states.py  test_services_timer.py  test_services_view_preferences.py  (+2 more)
(+266 files in other folders)
