[project]
name = "walker"
version = "1.2.0"
description = "Personal time tracker that makes filling the Timesheet system painless"
authors = [{name = "David Pierron", email = "dpierron@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Proprietary"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.20",
    "structlog>=25.0",
    "authlib>=1.3.2",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "joserfc>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-Authlib>=1.3.2",
]
# Only needed to produce the standalone .exe (CHR-009); not a runtime or test dependency.
build-exe = [
    "pyinstaller>=6.11.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-static-i18n>=1.2.0",
]

[project.scripts]
walker = "walker.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"walker" = ["py.typed"]

# --- Ruff ---------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# "×" and "–" are domain vocabulary (the "Code × Activity × Day" grid; "1 – 15" fortnights).
allowed-confusables = ["×", "–"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts are expected in tests

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are meant to be called in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Form",
    "fastapi.File",
]

# --- mypy ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["walker"]

# --- pytest -------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=walker --cov-report=term-missing"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.report]
fail_under = 80
